Change logo image source in header.html
Updated logo image source in header component.

--- a/components/header.html
+++ b/components/header.html
@@ -4,7 +4,7 @@
     <div class="logo-wrapper">
       <div class="logo-animation">
         <img 
-          src="https://i.ibb.co/5Wk2J9wL/x.jpg" 
+          src="https://play-lh.googleusercontent.com/78kA8WUOR9fig4mCSDnOZpx--fiQTmpc4NxtvUrRDWBiltHkHUzgSFYXtugAvfrypBsCX5lq0vSjxn87gTFA" 
           alt="فتح الله" 
           class="animated-logo"
         >
@@ -17,4 +17,5 @@
       <i class="fas fa-utensils"></i>
     </div>
   </div>
+
 </header>
