--- a/components/footer.html
+++ b/components/footer.html
@@ -3,7 +3,7 @@
     <!-- معلومات المطعم -->
     <div class="footer-info">
       <div class="footer-logo">
-        <img src="https://play-lh.googleusercontent.com/78kA8WUOR9fig4mCSDnOZpx--fiQTmpc4NxtvUrRDWBiltHkHUzgSFYXtugAvfrypBsCX5lq0vSjxn87gTFA=w480-h960-rw" alt="فتح الله" class="footer-logo-img">
+        <img src="assets/images/logo-fathallah.jpg" alt="فتح الله" class="footer-logo-img">
         <h3>فتح الله</h3>
       </div>
       <p class="footer-description">
@@ -69,6 +69,4 @@
   <div class="footer-bottom">
     <p>© 2025 فتح الله - جميع الحقوق محفوظة</p>
   </div>
-
 </footer>
-
