--- a/components/header.html
+++ b/components/header.html
@@ -4,7 +4,7 @@
     <div class="logo-wrapper">
       <div class="logo-animation">
         <img 
-          src="https://play-lh.googleusercontent.com/78kA8WUOR9fig4mCSDnOZpx--fiQTmpc4NxtvUrRDWBiltHkHUzgSFYXtugAvfrypBsCX5lq0vSjxn87gTFA=w480-h960-rw" 
+          src="assets/images/logo-fathallah.jpg" 
           alt="فتح الله" 
           class="animated-logo"
         >
@@ -17,6 +17,4 @@
       <i class="fas fa-utensils"></i>
     </div>
   </div>
-
 </header>
-
